# Lunar-Habitat-RL-Suite

./: .dockerignore  AUTONOMOUS_ENHANCEMENT_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_EXECUTION_REPORT.json  AUTONOMOUS_SDLC_REPORT.md  AUTONOMOUS_SDLC_RESEARCH_COMPLETION.md  BREAKTHROUGH_RESEARCH_PAPER.md  COMPREHENSIVE_MISSION_READINESS_ASSESSMENT.md  DEPLOYMENT_GUIDE.md  GENERATION2_ROBUSTNESS_IMPLEMENTATION_REPORT.md  GENERATION3_SCALING_ANALYSIS_REPORT.md  GENERATION3_SCALING_IMPLEMENTATION_REPORT.md  QUALITY_GATES_REPORT.md  README.md  RESEARCH_BREAKTHROUGH_IMPLEMENTATION.py  RESEARCH_PAPER.md  RESEARCH_VALIDATION_REPORT.py  RESEARCH_VALIDATION_REPORT_1755957845.json  TECHNICAL_ALGORITHM_SPECIFICATIONS.md  TECHNICAL_SPECIFICATIONS.md  TERRAGON_AUTONOMOUS_SDLC_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_GENERATION4_COMPLETION.md  TERRAGON_AUTONOMOUS_SDLC_MASTER_COMPLETION_REPORT.md  adaptive_algorithms.py  autonomous_enhancement_report.json  autonomous_enhancement_system.py  comprehensive_quality_gates.py  comprehensive_quality_gates_report.json  comprehensive_quality_gates_validation.py  comprehensive_quality_gates_validation_report.json  concurrent_framework.py  config_cache.py  enhanced_quality_gates.py  enhanced_quality_gates_report.json  final_integration_test.py  final_mission_readiness_report.json  final_mission_readiness_validation.py  generation1_complete_test.py  generation1_test.py  generation2_demo_test.py  (+60 more)
.github/workflows/: autonomous-deployment.yml
audit_logs/: audit.jsonl  mission_critical_audit.jsonl
deployment/: production_deployment_summary.json
deployment/autoscaling/: cluster-autoscaler.yaml  keda-scaling.yaml
deployment/cicd/: autonomous-deployment-pipeline.yml  github-actions.yml
deployment/disaster-recovery/: DR-PLAN.md  backup-schedule.yaml
deployment/distribution/: cloudflare-config.json
deployment/docker/: Dockerfile  Dockerfile.production  docker-compose.yml  entrypoint.sh
deployment/i18n/: config.json  de.json  en.json  es.json  fr.json  ja.json  zh-CN.json
deployment/infrastructure/: main.tf  variables.tf
deployment/kubernetes/: lunar-habitat-rl-advanced.yaml  lunar-habitat-rl.yaml  pod-disruption-budget.yaml
deployment/monitoring/: advanced-monitoring-stack.yaml  alert_rules.yml  prometheus-grafana-stack.yaml  prometheus.yml
deployment/security/: COMPLIANCE.md  network-policy.yaml
logs/: lunar_habitat_rl_structured.jsonl
lunar_habitat_rl/: __init__.py  cli.py  distributed.py  evaluation.py  hyperopt.py  multi_agent.py  sim2real.py
lunar_habitat_rl/algorithms/: __init__.py  baselines.py  causal_rl.py  edge_ai_deployment.py  federated_coordination_rl.py  federated_multihabitat_learning.py  hamiltonian_rl.py  lightweight_baselines.py  meta_adaptation_rl.py  model_based.py  multi_objective_rl.py  multi_physics_informed_rl.py  neuromorphic_adaptation_rl.py  offline_rl.py  physics_informed_rl.py  quantum_causal_intervention_rl.py  quantum_classical_hybrid_optimizer.py  quantum_inspired_rl.py  quantum_neuromorphic_rl.py  self_evolving_architecture_rl.py  training.py  uncertainty_aware_rl.py
lunar_habitat_rl/benchmarks/: __init__.py  research_benchmark_comprehensive.py  research_benchmark_suite.py
lunar_habitat_rl/core/: __init__.py  config.py  lightweight_config.py  lightweight_state.py  metrics.py  state.py
lunar_habitat_rl/examples/: __init__.py  (+2 more)
research_results/: multi-physics_informed_rl_results.json  neuromorphic_adaptation_networks_results.json  quantum-enhanced_causal_discovery_results.json
tests/: __init__.py  test_algorithms.py  test_breakthrough_algorithms.py  test_core_config.py  test_distributed.py  test_environments.py  test_evaluation.py  test_hyperopt.py  test_novel_algorithms.py  test_physics.py  test_security.py  test_utils.py
(+50 files in other folders)
