[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar-habitat-rl"
version = "0.1.0"
description = "Offline RL and Model-Based RL benchmarks for autonomous lunar base environmental control"
authors = [
    {name = "Daniel Schmidt", email = "daniel@terragon-labs.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["reinforcement-learning", "space", "nasa", "lunar", "habitat", "life-support"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "gymnasium>=0.29.0",
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "torch>=2.0.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.8.0",
    "wandb>=0.15.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "h5py>=3.7.0",
    "zarr>=2.13.0",
]

[project.optional-dependencies]
viz = [
    "plotly>=5.14.0",
    "dash>=2.10.0",
    "dash-bootstrap-components>=1.4.0",
    "open3d>=0.17.0",
    "pygltflib>=1.15.0",
]
physics = [
    "fenics>=2019.1.0",
    "pymeshlab>=2022.2",
    "vtk>=9.2.0",
    "pyvista>=0.40.0",
    "fipy>=3.4.4",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.0.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "lunar-habitat-rl[viz,physics,dev]"
]

[project.urls]
Homepage = "https://github.com/danieleschmidt/Lunar-Habitat-RL-Suite"
Documentation = "https://lunar-habitat-rl.readthedocs.io"
Repository = "https://github.com/danieleschmidt/Lunar-Habitat-RL-Suite"
Issues = "https://github.com/danieleschmidt/Lunar-Habitat-RL-Suite/issues"

[project.scripts]
lunar-habitat = "lunar_habitat_rl.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["lunar_habitat_rl*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.9"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "physics: marks tests requiring physics engines",
    "integration: marks integration tests",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["lunar_habitat_rl"]
omit = [
    "*/tests/*",
    "*/examples/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]